--- a/Dockerfile.ubi8
+++ b/Dockerfile.ubi8
@@ -1,24 +1,62 @@
-# Copyright 2022-2023 The MathWorks, Inc.
+# Copyright 2022-2024 The MathWorks, Inc.
 
 # To specify which MATLAB release to install in the container, edit the value of the MATLAB_RELEASE argument.
 # Use lower case to specify the release, for example: ARG MATLAB_RELEASE=r2022b
-ARG MATLAB_RELEASE=r2023b
+ARG MATLAB_RELEASE=R2024a
 
-# When you start the build stage, this Dockerfile by default uses the Ubuntu-based polyspace-deps image.
-# To check the available polyspace-deps images, see: https://hub.docker.com/r/mathworks/polyspace-deps
-FROM mathworks/polyspace-deps:${MATLAB_RELEASE}
+# Build on top of UBI 8
+FROM registry.access.redhat.com/ubi8/ubi:latest
 
 # Declare the global argument to use at the current build stage
 ARG MATLAB_RELEASE
+ARG HOME=/home/polyspace
+
+# Install Polyspace Bug Finder and Code Prover dependencies
+LABEL maintainer="The MathWorks"
+ENV TZ="Etc/UTC"
+RUN yum update --disableplugin=subscription-manager -y && \
+    yum install --disableplugin=subscription-manager -y \
+        alsa-lib.x86_64 \
+        cairo.x86_64 \
+        cairo-gobject.x86_64 \
+        cups-libs.x86_64 \
+        gdk-pixbuf2.x86_64 \
+        glib2.x86_64 \
+        glibc.x86_64 \
+        glibc-langpack-en.x86_64 \
+        gtk3.x86_64 \
+        libICE.x86_64 \
+        libXcomposite.x86_64 \
+        libXcursor.x86_64 \
+        libXdamage.x86_64 \
+        libXfixes.x86_64 \
+        libXft.x86_64 \
+        libXinerama.x86_64 \
+        libXrandr.x86_64 \
+        libXt.x86_64 \
+        libXtst.x86_64 \
+        libXxf86vm.x86_64 \
+        libdrm.x86_64 \
+        libglvnd-glx.x86_64 \
+        libsndfile.x86_64 \
+        libuuid.x86_64 \
+        libwayland-client.x86_64 \
+        libxcrypt.x86_64 \
+        mesa-libgbm.x86_64 \
+        nspr.x86_64 \
+        nss.x86_64 \
+        nss-util.x86_64 \
+        pam.x86_64 \
+        pango.x86_64 \
+        zlib.x86_64
 
 # Install mpm dependencies
-RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && \
-    apt-get install --no-install-recommends --yes \
-        wget \
-        unzip \
-        sudo \
+RUN yum install --disableplugin=subscription-manager -y \
+        wget.x86_64 \
+        unzip.x86_64 \
+        sudo.x86_64 \
         ca-certificates && \
-    apt-get clean && apt-get autoremove
+    yum --disableplugin=subscription-manager clean all -y
 
 # Run mpm to install Polyspace Bug Finder and Code Prover Server in the target location
 # and delete the mpm installation afterwards
@@ -32,9 +70,7 @@ RUN wget -q https://www.mathworks.com/mpm/glnxa64/mpm && \
     ln -s /opt/matlab/polyspace/bin/polyspace* /usr/local/bin/
 
 # Add a "polyspace" user and grant sudo permission.
-RUN adduser --shell /bin/bash --disabled-password --gecos "" polyspace && \
-    echo "polyspace ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/polyspace && \
-    chmod 0440 /etc/sudoers.d/polyspace
+RUN adduser --home ${HOME} --shell /bin/bash --password "" --groups wheel polyspace
 
 # One of the following 2 ways of configuring the license server to use must be
 # uncommented.
@@ -55,5 +91,5 @@ ENV MLM_LICENSE_FILE=$LICENSE_SERVER
 
 # Set user and work directory
 USER polyspace
-WORKDIR /home/polyspace
+WORKDIR ${HOME}
 CMD []
