--- a/Dockerfile.ubi8
+++ b/Dockerfile.ubi8
@@ -2,7 +2,7 @@
 
 # To specify which MATLAB release to install in the container, edit the value of the MATLAB_RELEASE argument.
 # Use lower case to specify the release, for example: ARG MATLAB_RELEASE=r2022b
-ARG MATLAB_RELEASE=R2025a
+ARG MATLAB_RELEASE=R2025b
 
 # Build on top of UBI 8
 FROM registry.access.redhat.com/ubi8/ubi:latest
